[tool.poetry]
name = "cron_audit"
version = "0.1.0"
description = "Creates a report of all cron jobs for a specific user, across all hosts"
authors = ["Thomas Chamberlin <tchamber@nrao.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.33"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
